# ChangeLog for sys-apps/openrc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.230 2012/09/29 03:15:54 heroxbd Exp $

  29 Sep 2012; Benda Xu <heroxbd@gentoo.org> openrc-9999.ebuild:
  make_args should be called only once; ED -> D in src_install to avoid double
  prefix. close 415899

  28 Sep 2012; William Hubbs <williamh@gentoo.org> openrc-9999.ebuild:
  fix typo

  28 Sep 2012; William Hubbs <williamh@gentoo.org> openrc-9999.ebuild:
  Fix the ebuild so we can use pre/postinst on prefix systems as well.
  Originally I did not think we needed this, but thinking it over it is better
  to have them.  Also this reworks the live portion of the ebuild to use a
  separate inherit call.

  27 Sep 2012; William Hubbs <williamh@gentoo.org> openrc-9999.ebuild:
  Add prefix support for bug #415899. I would like to thank Benda Xu for working
  with me on this.

  09 Sep 2012; William Hubbs <williamh@gentoo.org> -openrc-0.10.1.ebuild,
  -openrc-0.10.2.ebuild, -openrc-0.10.3.ebuild, -openrc-0.10.ebuild,
  -openrc-0.9.9.1.ebuild, -openrc-0.9.9.2.ebuild, -openrc-0.9.9.3.ebuild,
  -openrc-0.9.9.ebuild:
  remove old versions

*openrc-0.10.5 (04 Jul 2012)

  04 Jul 2012; William Hubbs <williamh@gentoo.org> +openrc-0.10.5.ebuild:
  version bump

*openrc-0.10.4 (02 Jul 2012)

  02 Jul 2012; William Hubbs <williamh@gentoo.org> +openrc-0.10.4.ebuild:
  version bump

*openrc-0.10.3 (11 Jun 2012)

  11 Jun 2012; William Hubbs <williamh@gentoo.org> +openrc-0.10.3.ebuild:
  version bump

*openrc-0.10.2 (27 May 2012)

  27 May 2012; William Hubbs <williamh@gentoo.org> +openrc-0.10.2.ebuild:
  version bump to fix termencoding to not run on lxc.

*openrc-0.10.1 (24 May 2012)

  24 May 2012; William Hubbs <williamh@gentoo.org> +openrc-0.10.1.ebuild:
  version bump to fix regression in bug #417227

*openrc-0.10 (22 May 2012)

  22 May 2012; William Hubbs <williamh@gentoo.org> +openrc-0.10.ebuild: