@@ -1,15 +1,25 @@
-AUX openrc-0.8.3-ccwgroup.patch 1992 RMD160 7a403f5107b17c200b81e4290292e74ec9f222fe SHA1 228f924991c870e7a9ab227c0b9d99e00dbb3d8a SHA256 5a092cc0ab90507c28f8bd6af34b67fbb3d8a9ddce257195dde55128f87324fc
-AUX openrc-0.8.3-deprecation_warning.patch 1055 RMD160 f91a0ca1aba21c9da5e968ae66f709e1751459d1 SHA1 8a07d6106ce4675087224c5cd22d5c9ce01696fb SHA256 fa95aaa34db3556240031fcfb5e33d85e44da2a2f74562faa97c75f569d4efa0
-AUX openrc-9999-msg-style.patch 2775 RMD160 af958b2a8ed5ad29f25b53bad9a426cf7e173405 SHA1 251b8d0a52bb6e98d80a5213afc4d067583441fc SHA256 637fc2d13e0940b55b7d4613ebf8ebabdee87a802a2690191c01fd5ee7cb3581
-AUX openrc-9999-pause.patch 825 RMD160 737615919d779894e990072a0ff026aeb4fc0a95 SHA1 c9c469d0bfb685a83d8a736467434b22eaf702cd SHA256 ffa34418921d30c589ad762a5d6d7640c37e7279ca19af469912cb9f118cc75d
-AUX openrc.logrotate 71 RMD160 4e7370ca873bd917f16e2b8cfc4bc71accbf2353 SHA1 ef1f26020db432f96a1485f72a189b288ef6873b SHA256 0b44210db9770588bd491cd6c0ac9412d99124c6be4c9d3f7d31ec8746072f5c
-AUX start-stop-daemon.pam 63 RMD160 114c1bbc14f58e5360a2e3136dba06bb953196e4 SHA1 be64dbdc7a99c8260aafdd346c5cb51ced8c1730 SHA256 2681da17e4a122656b5303b7c7eca82b8fb182641290b153fdbe96b63638086d
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX openrc-0.8.3-ccwgroup.patch 1992 SHA256 5a092cc0ab90507c28f8bd6af34b67fbb3d8a9ddce257195dde55128f87324fc SHA512 bea08e3064b8253713d996098006e8f636fef8e071d0c373b91db643c678aff36d490c5db853c97c91e0ce53f10c4db3d2b104283303aba1d3841058d5e3bb4a WHIRLPOOL a37fbb6fb31abab0631d61baa61280330791209c329aed0c41ffef1ffdab9e0ba41732404035f8a26865077b1d857387f4d253c71febfc9743ff864b484ec1cf
+AUX openrc-0.8.3-deprecation_warning.patch 1055 SHA256 fa95aaa34db3556240031fcfb5e33d85e44da2a2f74562faa97c75f569d4efa0 SHA512 72f8dc6a931ea4c97f337a1a358ccc4fc3600d8809e549afad8697fc74a07fa6f1460603d5c80ea08af2e441ad8cb7f404454876dce1244fdba13099f948d00a WHIRLPOOL 5bcee2abc2158ce750b94fee97f6e270adf4d5098bac2d64d2423bae462ce3b702c5df52d3e013e0027db66e09edde1c7aca1d5b8d77088f0f8937f968eba176
+AUX openrc-9999-msg-style.patch 2775 SHA256 637fc2d13e0940b55b7d4613ebf8ebabdee87a802a2690191c01fd5ee7cb3581 SHA512 ffeaba677106929ed842d38b161a865a6b3bd26e4ed804bf922d7a1e3c749adbf23348a20ca1be44f41cc0abd7d113172f1865d29865f322e30fbac9f9b34cba WHIRLPOOL 3044d94c523ec2a33a2b9cfda5988070d67bfe631c1fba1314eaba5f432e9e4dfcbb307685e326c181c9205dfe12c161568e3707b276ceff2114bd92e9375ec0
+AUX openrc-9999-pause.patch 825 SHA256 ffa34418921d30c589ad762a5d6d7640c37e7279ca19af469912cb9f118cc75d SHA512 ebab7434c5e1b76b882d99d45069de33da07230c9fa9bf28212b18c2742d726aff7be62907964cad9c37b483c25d805dc07d0c5927349f8104fef2f957e69943 WHIRLPOOL 2f633409182e6ab0da4162fcd3a29e928eaad9aa72d008192aa0f4e9532b55492a122c61d9027766a04a766be2c74697624a0f15aaadc273de45cca554c13cd3
+AUX openrc.logrotate 71 SHA256 0b44210db9770588bd491cd6c0ac9412d99124c6be4c9d3f7d31ec8746072f5c SHA512 690612fddfb2c4cf8f6b5ba7239b9faf29eb3d9b152ab4dcf62694aa2852780440d08cee56d98a9597607f446b3697c911269562821a8402bb5747cbbae34bd9 WHIRLPOOL 8678c51583c77a4985760e4ea2082e7214f28b68cad460b362d683db71067cf6031e1f3275e83ac7959b0973cdafd0a4102525fe7b0d975798ec2182d1fd2769
+AUX start-stop-daemon.pam 63 SHA256 2681da17e4a122656b5303b7c7eca82b8fb182641290b153fdbe96b63638086d SHA512 85cf440611b8f87f51bf24bdd9fa03639a75b950f00096d81b8826c21ae85ff9784b8c56b8ddb482e70f08bce933d4561b30750346d51fb2cef3be34acc065cb WHIRLPOOL 4abc9f051155a62d3033258a06003a4ca3909d8104deca84d5c1605bc1c7e56167fd82b2b4b72fe7b707070de98a7628730de1ad3f14b924b5b1480fba5ef854
 DIST openrc-0.10.4.tar.bz2 171717 SHA256 002341b5fbdf2077fb246a6fa155861d7b21cef9f51cb298171ba9d164e2ba03 SHA512 480453698c49c2fcda92c6d9afe6f7eba38957831b3bea63de124fb85de3c7830dd2b881d1aa517c560e1b73f6b4c7b3b0fb2ff99a5b76e555b52edd3b3ceacc WHIRLPOOL fcec0b01cad4fb7b8fce9729da09618457cec57ac61b92b53ea70c50a00b21e2c88bb0a34f16f7065f6e349feee1014a84982b09c7bc2a6954ae270f8ed31f27
 DIST openrc-0.10.5.tar.bz2 171742 SHA256 27677142a7aa47a1c7e863fd4bce0d092aca7870012812e4f7a690a14f1e242c SHA512 f855d5f1b115cc4387585b9533fba78d22b7c54379a26e3d26995c1ff5b3bbe11bb6e6adc715d35710fcff77449d23bcdbbd4fbb5ea74e66a2ba224dfe2746e3 WHIRLPOOL f39a88e1f44f741f8eb31db07e5bb199253912d5c3cc7d9006467d52e07d5b814c1e3d2d652e1b503a5a81b953be094d2c95a50397812301f76abef6e44c608f
 DIST openrc-0.9.8.4.tar.bz2 166843 SHA256 904e139a90d5f610b59f9e0cc52ddac487c58e4fa73468b5e9fdac1a03362533 SHA512 27227fb0fcf0c830ddc39e6c91e5adb5d1e56cb2a50ca0148bb22c5ea587c7e492a50e066d1f34c7cd4f7869a12edcd71f25602468b838aed8fbc1ddafc9ac6e WHIRLPOOL db183bf0d5a041a95f0cc5b636f16b90b7a57c9e696b7ed67f4e31dde2731ffb2383eaffa8e6ad9955785a6632e8e44089cb900fc6c1a848149b3f37fddc30fa
-EBUILD openrc-0.10.4.ebuild 14421 RMD160 26c6a2575ee3d3228a109f8f9ca7dc5b825d6226 SHA1 4251ea673ebf748555983d61a0da9716a09de1a0 SHA256 13d881943711b9f5dcf7ffc70af7c5fc2d51fd29cff93a0820508ade8f7914be
-EBUILD openrc-0.10.5.ebuild 14421 RMD160 22649ec0d66f1eb31a2790dc40d6fcdcbacc296e SHA1 7cc8a5597973e626a37164648c1f49aabe6c6f7e SHA256 a3de4203ca5221570a679db74083198b03a6a6a5439788a5fda0ed2452e99bf4
-EBUILD openrc-0.9.8.4.ebuild 13967 RMD160 8ea8b9e8c2d64c8c14e0729be795aaae294ce89d SHA1 382e1235affde7adcd3fe780608bcf847afae5a8 SHA256 dd100aaaf00fe0f46008cda1a0b12a6753bd6019cb606d747f0edefc7b359468
-EBUILD openrc-9999.ebuild 14815 RMD160 1c94887addabd0247480108ff73ba074c5c44aab SHA1 afb141058ad1677617f7134ac0330b98cb0b8ed3 SHA256 6a259ac8cea180708fa7ade3c6bf842e8007268a1366580ffdadbe9682080e28
-MISC ChangeLog 39690 RMD160 d8d66c25fc8978f1b11dd3adfd99e99c5d248a44 SHA1 867846f4edf947061c8cf9b74e0c133fc46a78b4 SHA256 086c535728ee8708eec5db490dfa762e872a24a65f9def62134ef42dedee3c7c
-MISC metadata.xml 248 RMD160 7d4c9439b11226c14670e263894f8b817a15dcab SHA1 8a63f915b9980ec135bb3effcb79c53d9e0afd73 SHA256 1e50acb4e0c7b890089cafec26f902ce9b4c06a877905618aee0f020da8ae8cc
+EBUILD openrc-0.10.4.ebuild 14421 SHA256 13d881943711b9f5dcf7ffc70af7c5fc2d51fd29cff93a0820508ade8f7914be SHA512 a995f5d1d200aba9166ae44328139a53b2539401b0b2e069b3ff70d1f17e0e96c0e87c841097e5db3ece2dbfab10248b6cccf8316a57685c71a4222b5def8581 WHIRLPOOL 1dbc38009519eca1503b6040fbd5a065c630da5b457707b841e5f5a781a1cf8dd4b06327bcf7c7b8d30f78aa00bedff72432560325e8041244884764f109c02f
+EBUILD openrc-0.10.5.ebuild 14421 SHA256 a3de4203ca5221570a679db74083198b03a6a6a5439788a5fda0ed2452e99bf4 SHA512 17c342ef9f3bd8be978fbec3425cebb78c3c5ac262b121bec69ebb01f0c8ddc2d07d033d6a29f37df2de13935b811c251e862be9a41ae07f3423d229ecaa9b2d WHIRLPOOL 25e1144188ab066ddc42015c52a5bff55d0d2a499918debc4e614606bb8809b2de294574116e0290a609f5afef453a2ed537207379c06c23d11dc58e43fcbc8b
+EBUILD openrc-0.9.8.4.ebuild 13967 SHA256 dd100aaaf00fe0f46008cda1a0b12a6753bd6019cb606d747f0edefc7b359468 SHA512 6a958bea4c0cc6f9adcdba07a2c193e04aaa48f39a5d27329a5ede5d1be97fb967e96751d1450c9ac60b3e194445f9422892865fd7f53d6c2d540c17624d4f2f WHIRLPOOL 62bc0da6afa4b5b9a7f52678b727e489c540c82d0dec2ad503e1fb84ce4f3dc357f7f9ad81cdb99216fef1d156b467e2e3ad0cdde52d360d0924ac7caa019ad4
+EBUILD openrc-9999.ebuild 14733 SHA256 82168d71f08610f60d7e41472495fd6fd3ae3244078c22b22036c5095b98949a SHA512 0b3c4464aec7f962a7620d0865509225c75e25caf1dbd106d910c37ce038c8271c071a1b1cb91a2c6cf89dfe783e73ea8f2230c3620a7bc731d0e550f9e05d58 WHIRLPOOL b495ffd16f8c22641e7f2445535a2ffc774fd2af40a3dc856dc759d7dd8f7dd703102de58880a781bc971a786ca77d14d1516f4bc33aec7475b4c08e4abe1766
+MISC ChangeLog 39925 SHA256 de71c353dd1caa80cdc94725c2a90757b314109ba13bb1201d51321f2a213ff3 SHA512 36e1c8205685b75ad4ffa166f7550c6015f5adb6651c261cabbf1724aa3b08ef5e31e27f7941b171fa060312f5aca6c511cca21dd154b256f319dfb7ee5587de WHIRLPOOL cee2bdff55a71431f429cdc0010370a3e1184a3d28060b9c37e2f250d41462a0ee9ae7a42dc4935685cfa87e69a6848ed9b8e61e39905205399676168bf2773a
+MISC metadata.xml 248 SHA256 1e50acb4e0c7b890089cafec26f902ce9b4c06a877905618aee0f020da8ae8cc SHA512 e71772c01a76d089da16f089a8ca01cc3356d0d0a97d804b996c4f215009eefe06bd2770ff23bb98a29820d0dca55f434e1e99f963357309c2f1813a5420f121 WHIRLPOOL ca0cc96027f581e2b671a3f00ba549204d999cfc93d3837be38ea7023222ed212cf786b4a50174087a64bcf284825751f44a99f228887222944c73f9d6940333
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlBnXFMACgkQblQW9DDEZTj9kQCfdD6JQwCMAsc4fl3jN8Hu20ty
+BrcAmwVtDh1z4aP2om7eTilppSTnZ1Kd
+=lIyv
+-----END PGP SIGNATURE-----
